test/sema/typeck/binop/equals-type-param-wrong-return.out
error: `return` expects value of type `T` but got `Bool`.
--> equals-type-param-wrong-return.dora:1:50 - 3:2
1 error found.
