test/sema/typeck/binop/equals-type-param-wrong-return.dora
fn eq[T: std::traits::Equals](lhs: T, rhs: T): T {
    lhs == rhs
}
